fixed header size and spacing

--- a/css/blog.css
+++ b/css/blog.css
@@ -33,7 +33,7 @@ div{
 
 header h1{
 	color: white;
-	font-size: 50px;
+	font-size: 48px;
 	font-family: 'Lobster', sans-serif;
 	padding: 70px;
 	text-decoration-style: outline 2px teal;
